# bluetti-monitor

./: .gitignore  CLAUDE.md  Dockerfile  PROTOCOL.md  README.md  config.yml.example  docker-compose.yml  pyproject.toml  requirements.txt
bluetti_monitor/: __init__.py  __main__.py  client.py  const.py  crc.py  crypto.py  device.py  fields.py  mqtt_bridge.py  protocol.py
tests/: test_crc.py  test_crypto.py  test_fields.py  test_handshake_e2e.py  test_protocol.py
