[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bluetti-monitor"
version = "0.1.0"
description = "Reverse-engineered Bluetti BLE client and MQTT / Home Assistant bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "James" }]
dependencies = [
    "bleak>=0.21",
    "paho-mqtt>=2.0",
    "cryptography>=41",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
bluetti-monitor = "bluetti_monitor.__main__:main"

[tool.setuptools.packages.find]
include = ["bluetti_monitor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
